log
Thu May 12 19:29:46 UTC 2022: 
 tests:  0|5
total_score: 0/70
9fdb68c
Thu May 12 19:46:04 UTC 2022: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  2|4
total_score: 15/70
1f337ae
Sun May 15 17:06:45 UTC 2022: 
 sudoku.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f2bb085
Sun May 15 17:13:39 UTC 2022: 
 sudoku.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
3b93cb5
Sun May 15 17:16:32 UTC 2022: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
fdc04a7
Sun May 15 17:32:04 UTC 2022: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  7|1
total_score: 55/70
1d64ecd
Sun May 15 17:32:30 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
78875ca
Sun May 15 17:33:44 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘DFS’:
sudoku.c:140:5: error: too many arguments to function ‘free’
     free(aux, adj, n);
     ^~~~
In file included from test.c:2:0:
/usr/include/stdlib.h:563:13: note: declared here
 extern void free (void *__ptr) __THROW;
             ^~~~
Compilation failed
53c2c32
